[tool.poetry]
name = "pyrometheus"
version = "0.1.0"
description = ""
authors = ["Rafał Kowalski <rafkow91@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
