[tool.poetry]
name = "pyrometheus"
version = "0.1.0"
description = "A rental of spaceships"
authors = ["Rafał Kowalski <rafkow91@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.43"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
